--- a/Segmantic Segmentation with VGG16.ipynb
+++ b/Segmantic Segmentation with VGG16.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def execute_on_image(sess, logits, input_layer, label, keep_prob, learning_rate):\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "\n",
+    "    chosen_image = \"165\"\n",
+    "    image_file = \"./data/Train/CameraRGB/{}.png\".format(chosen_image)\n",
+    "    truth_file = \"./data/Train/CameraSeg/{}.png\".format(chosen_image)\n",
+    "    \n",
+    "    image = cv2.imread(image_file)\n",
+    "    image = cv2.resize(image, image_shape)\n",
+    "    \n",
+    "    truth = cv2.imread(truth_file)\n",
+    "    truth = cv2.cvtColor(truth, cv2.COLOR_BGR2RGB)\n",
+    "    truth = cv2.resize(truth, image_shape)\n",
+    "    truth = imageToTruth(truth)\n",
+    "    \n",
+    "    return sess.run([output_layer], feed_dict={\n",
+    "            input_layer: np.array([image]),\n",
+    "            label: np.array([truth]),\n",
+    "            keep_prob: keep_probability,\n",
+    "            learning_rate: learning_rate_alpha\n",
+    "        })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_test = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -397,29 +435,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from b'./vgg/variables/variables'\n",
-      "Graph has been built - launching training\n",
-      "====== :-) ======\n",
-      "\n",
-      "Launching Epoch 0\n",
-      "Batch 10 - loss of 2.6388847827911377\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-dc8ce54260df>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;31m#and now, training!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msess\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_layer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeep_prob\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-21-e0be070d9c9c>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(sess, input_layer, label, keep_prob, learning_rate)\u001b[0m\n\u001b[1;32m     23\u001b[0m                         \u001b[0mlabel\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtruth\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m                         \u001b[0mkeep_prob\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mkeep_probability\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m                         \u001b[0mlearning_rate\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mlearning_rate_alpha\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m                     }\n\u001b[1;32m     27\u001b[0m                 )\n",
-      "\u001b[0;32m~/anaconda3/envs/dlnd/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    903\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    904\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[0;32m--> 905\u001b[0;31m                          run_metadata_ptr)\n\u001b[0m\u001b[1;32m    906\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    907\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/dlnd/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run\u001b[0;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1135\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfinal_fetches\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mfinal_targets\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mfeed_dict_tensor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1136\u001b[0m       results = self._do_run(handle, final_targets, final_fetches,\n\u001b[0;32m-> 1137\u001b[0;31m                              feed_dict_tensor, options, run_metadata)\n\u001b[0m\u001b[1;32m   1138\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1139\u001b[0m       \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/dlnd/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_do_run\u001b[0;34m(self, handle, target_list, fetch_list, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1353\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mhandle\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1354\u001b[0m       return self._do_call(_run_fn, self._session, feeds, fetches, targets,\n\u001b[0;32m-> 1355\u001b[0;31m                            options, run_metadata)\n\u001b[0m\u001b[1;32m   1356\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1357\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_do_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_prun_fn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_session\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeeds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetches\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/dlnd/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_do_call\u001b[0;34m(self, fn, *args)\u001b[0m\n\u001b[1;32m   1359\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m_do_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1360\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1361\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1362\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mOpError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1363\u001b[0m       \u001b[0mmessage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/dlnd/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run_fn\u001b[0;34m(session, feed_dict, fetch_list, target_list, options, run_metadata)\u001b[0m\n\u001b[1;32m   1338\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1339\u001b[0m           return tf_session.TF_Run(session, options, feed_dict, fetch_list,\n\u001b[0;32m-> 1340\u001b[0;31m                                    target_list, status, run_metadata)\n\u001b[0m\u001b[1;32m   1341\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1342\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_prun_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "INFO:tensorflow:Restoring parameters from b'./vgg/variables/variables'\n"
      ]
     }
    ],
@@ -437,8 +453,157 @@
     "    cross_entropy_loss, optimizer, train_op = get_loss(logits, correct_labels)\n",
     "\n",
     "    #and now, training!\n",
-    "    train(sess, input_layer, label, keep_prob, learning_rate)\n",
+    "#     train(sess, input_layer, label, keep_prob, learning_rate)\n",
+    "    \n",
+    "    #execute graph on a singular image\n",
+    "    output_test = execute_on_image(sess, logits, input_layer, label, keep_prob, learning_rate)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(576, 160, 13)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_test[0][0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[7.67056823e-01, 3.09352130e-01, 1.31825760e-01, ...,\n",
+       "         2.91122705e-01, 1.60486817e-01, 7.48600543e-01],\n",
+       "        [8.68503228e-02, 1.86929703e-01, 5.14724627e-02, ...,\n",
+       "         9.99738872e-01, 2.25904211e-03, 3.45170265e-04],\n",
+       "        [9.98210669e-01, 1.14997312e-01, 5.11900435e-05, ...,\n",
+       "         9.99963164e-01, 9.93969083e-01, 8.65127367e-04],\n",
+       "        ...,\n",
+       "        [5.74969769e-01, 4.77827191e-01, 2.98987150e-01, ...,\n",
+       "         1.57196954e-01, 9.02837217e-01, 1.33709073e-01],\n",
+       "        [7.45507777e-01, 7.63445735e-01, 6.01666272e-01, ...,\n",
+       "         7.19402909e-01, 5.16307831e-01, 8.78918827e-01],\n",
+       "        [2.98375100e-01, 7.04606473e-01, 3.46926153e-01, ...,\n",
+       "         8.81381750e-01, 1.81084663e-01, 6.07959151e-01]],\n",
+       "\n",
+       "       [[9.99996424e-01, 9.15998518e-01, 2.99819499e-01, ...,\n",
+       "         8.07579815e-01, 9.75729823e-01, 1.46905193e-03],\n",
+       "        [1.01733254e-02, 4.47796099e-03, 5.23329824e-02, ...,\n",
+       "         9.98283386e-01, 9.98081923e-01, 9.81153250e-01],\n",
+       "        [6.45237088e-01, 9.99958277e-01, 7.49354303e-01, ...,\n",
+       "         9.98909950e-01, 9.82536554e-01, 9.97001827e-01],\n",
+       "        ...,\n",
+       "        [7.38901854e-01, 5.76569200e-01, 1.97195515e-01, ...,\n",
+       "         3.06770414e-01, 2.89311320e-01, 4.29610848e-01],\n",
+       "        [4.26049471e-01, 9.16268826e-01, 5.16890526e-01, ...,\n",
+       "         5.03565252e-01, 3.97897810e-01, 5.95658600e-01],\n",
+       "        [3.08055878e-01, 6.44134820e-01, 3.62679094e-01, ...,\n",
+       "         6.19884133e-01, 6.49683416e-01, 2.59905398e-01]],\n",
+       "\n",
+       "       [[4.96385008e-01, 7.90371895e-01, 1.13599366e-02, ...,\n",
+       "         1.71941027e-01, 5.45929857e-02, 8.11703503e-01],\n",
+       "        [9.55729187e-01, 2.59068102e-01, 6.22286415e-03, ...,\n",
+       "         1.62193738e-02, 4.12776440e-01, 9.92377043e-01],\n",
+       "        [9.62395608e-01, 3.32045972e-01, 3.84372615e-05, ...,\n",
+       "         8.66348203e-03, 8.31960440e-01, 3.58016007e-02],\n",
+       "        ...,\n",
+       "        [3.54254514e-01, 3.46503317e-01, 2.73319185e-01, ...,\n",
+       "         8.54062021e-01, 4.67859745e-01, 5.48231125e-01],\n",
+       "        [2.31669441e-01, 3.22368681e-01, 3.52699399e-01, ...,\n",
+       "         6.63776577e-01, 6.15737736e-01, 7.24985838e-01],\n",
+       "        [5.44653952e-01, 3.04479241e-01, 7.13186920e-01, ...,\n",
+       "         6.01417959e-01, 3.08085024e-01, 4.95515823e-01]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[2.72134244e-01, 3.94038036e-02, 8.83069396e-01, ...,\n",
+       "         1.98672950e-01, 2.46924744e-03, 2.05147654e-01],\n",
+       "        [3.67045701e-01, 1.94758538e-03, 6.49371684e-01, ...,\n",
+       "         9.97802317e-01, 1.92832381e-01, 3.51840109e-01],\n",
+       "        [9.56746101e-01, 8.60012311e-04, 8.81876349e-01, ...,\n",
+       "         3.36408585e-01, 4.03594911e-01, 6.80391816e-03],\n",
+       "        ...,\n",
+       "        [6.04712069e-01, 7.36889899e-01, 1.34688814e-03, ...,\n",
+       "         8.63294959e-01, 9.77147937e-01, 9.97840524e-01],\n",
+       "        [1.40951219e-04, 9.40025508e-01, 6.16088137e-02, ...,\n",
+       "         9.84275281e-01, 6.75089419e-01, 9.03231025e-01],\n",
+       "        [9.37783360e-01, 1.12686224e-01, 5.79544067e-01, ...,\n",
+       "         9.65473831e-01, 8.85893226e-01, 9.99759972e-01]],\n",
+       "\n",
+       "       [[8.39809477e-02, 9.98035014e-01, 9.19874609e-01, ...,\n",
+       "         7.90360391e-01, 9.32942424e-03, 8.83708477e-01],\n",
+       "        [9.62095737e-01, 2.24412954e-03, 9.42993164e-01, ...,\n",
+       "         1.18629076e-03, 8.79474953e-02, 2.74549723e-01],\n",
+       "        [2.98405136e-03, 8.19441617e-01, 7.24502206e-01, ...,\n",
+       "         9.83320832e-01, 9.52613711e-01, 7.57417798e-01],\n",
+       "        ...,\n",
+       "        [9.74347651e-01, 3.96832684e-03, 8.72677386e-01, ...,\n",
+       "         9.99958277e-01, 2.01671906e-02, 1.04151398e-01],\n",
+       "        [3.60234790e-02, 3.27328831e-01, 6.84720099e-01, ...,\n",
+       "         8.81937325e-01, 9.97203946e-01, 5.93290269e-01],\n",
+       "        [8.38998139e-01, 9.78953660e-01, 9.69695747e-01, ...,\n",
+       "         3.19885373e-01, 9.85516012e-01, 7.79053709e-03]],\n",
+       "\n",
+       "       [[4.13569719e-01, 9.61568236e-01, 3.70962083e-01, ...,\n",
+       "         1.12280799e-02, 9.92692053e-01, 4.34198260e-01],\n",
+       "        [9.06795382e-01, 8.60379577e-01, 9.60747004e-01, ...,\n",
+       "         1.33685740e-02, 3.38454366e-01, 9.97545660e-01],\n",
+       "        [8.96685064e-01, 3.96203518e-01, 9.58063304e-01, ...,\n",
+       "         9.48554397e-01, 7.67331943e-02, 8.90479088e-01],\n",
+       "        ...,\n",
+       "        [3.43185067e-02, 8.54498744e-01, 9.95469213e-01, ...,\n",
+       "         9.40006614e-01, 8.08785796e-01, 2.86350362e-02],\n",
+       "        [9.99739468e-01, 1.56411260e-01, 9.17107999e-01, ...,\n",
+       "         3.84743035e-01, 1.82809487e-01, 9.46036279e-01],\n",
+       "        [6.13554239e-01, 9.95211780e-01, 2.93902278e-01, ...,\n",
+       "         9.98663664e-01, 9.83220041e-01, 4.86976475e-01]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_test[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "92160"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "160*576"
    ]
   },
   {
